<?xml version="1.0"?>
<package>
  <name>agastpp</name>
  <version>0.0.0</version>
  <description>The agastpp package</description>

  <maintainer email="quchao@seas.upenn.edu">chao</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
